30 November 2007: Wouter
	- makefile that creates libunbound.la, basic file or libunbound.a
	  when creating static executables (no libtool).
	- more API setup.

29 November 2007: Wouter
	- 0.9 public API start.

28 November 2007: Wouter
	- Changeup plan for 0.8 - no complication needed, a simple solution
	  has been chosen for authoritative features.
	- you can use single quotes in the config file, so it is possible
	  to specify TXT records in local data.
	- fixup small memory problem in implicit transparent zone creation.
	- test for implicit zone creation and multiple RR RRsets local data.
	- local-zone nodefault test.
	- show testbound testlist on commit.
	- iterator normalizer changes CNAME chains ending in NXDOMAIN where
	  the packet got rcode NXDOMAIN into rcode NOERROR. (since the initial
	  domain exists).
	- nicer verbosity: 0 and 1 levels.
	- lower nonRDquery chance of eliciting wrongly typed validation
	  requiring message from the cache.
	- fix for nonRDquery validation typing; nodata is detected when
	  SOA record in auth section (all validation-requiring nodata messages
	  have a SOA record in authority, so this is OK for the validator),
	  and NS record is needed to be a referral.
	- duplicate checking when adding NSECs for a CNAME, and test.
	- created svn tag 0.8, after completing testbed tests.

27 November 2007: Wouter
	- per suggestion in rfc2308, replaced default max-ttl value with 1 day.
	- set size of msgparse lookup table to 32, from 1024, so that its size
	  is below the 2048 regional large size threshold, and does not cause
	  a call to malloc when a message is parsed.
	- update of memstats tool to print number of allocation calls.
	  This is what is taking time (not space) and indicates the avg size
	  of the allocations as well. region_alloc stat is removed.

22 November 2007: Wouter
	- noted EDNS in-the-middle dropping trouble as a TODO.
	  At this point theoretical, no user trouble has been reported.